--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,16 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.drag-drop-container {
+  height: 100%;
+  width: 100%;
+  border: 1px solid black;
+  overflow-y: auto;
 }
+
+.item {
+  margin: 20px;
+  padding: 10px;
+  cursor: pointer;
+}
+
